# legambiente-altapadovana

./: LICENSE  README.md
.github/workflows/: import_data_from_sensor-community.yaml  import_from_sensor-community_by_date_range.yaml  import_from_sensor-community_by_date_range.yaml.old
sensorcommunity/: .gitignore
sensorcommunity/dataingester/: .gitignore  Cargo.toml  README.md  build_musl.sh  chips.csv  import_data_by_date_range.py  import_data_by_date_range_questdb.py  import_data_last_5_min.py  install_influxdb_python_cli.sh  sensor_cache.py  sensors.csv
sensorcommunity/dataingester/chip_data/2025-03-03/: 2025-03-03_chip_esp8266-15303512.csv
sensorcommunity/dataingester/chip_data/2025-03-22/: 2025-03-22_chip_esp8266-15303512.csv
sensorcommunity/dataingester/deploy/: dataingester.service  dataingesterd.service  deploy_dataingester.sh
sensorcommunity/dataingester/deploy/dataingester/: deploy_dataingester.sh  import_data_by_date_range_questdb.py
sensorcommunity/dataingester/deploy/influxdb3/: influxdb.service
sensorcommunity/dataingester/deploy/questdb/: README.md  questdb.service
sensorcommunity/dataingester/influxdb3/: README.md  influxd-systemd-start.sh  influxd.service
sensorcommunity/dataingester/src/: main.rs
sensorcommunity/dataingester/src/cache/: hotreload.rs  mod.rs
sensorcommunity/dataingester/src/config/: init.rs  manifest.rs  mod.rs
sensorcommunity/dataingester/src/http/: mod.rs
sensorcommunity/dataingester/src/logging/: mod.rs  suffix.rs  tests.rs
sensorcommunity/dataingester/src/sensor_data/: import_csv.rs  influxdb2.rs  influxdb3.rs  mod.rs  questdb.rs  sensor_data.rs
sensorcommunity/grafana/: README.md
sensorcommunity/grafana/influxdb/: README.md  import_yesterdays_data.sh
sensorcommunity/influxdb/: .gitignore  README.md  chips_by_city.csv  download_yesterdays_data.sh  generate_influxdb_config.sh  import_data.sh  import_data_by_date_range.sh  import_data_last_5_min.py  import_sensors_by_city.sh  import_yesterdays_data.sh  install_influxdb_cli.sh  sensors_by_city.csv
training/configurazione-centralina/: README.md
training/corso-software-polveri-sottili/01-intro/: README.md
training/corso-software-polveri-sottili/02-grafana/: README.md
training/corso-software-polveri-sottili/20250205/: REAMDE.md
training/esportazione-dati/: README.md
