[package]
name = "dataingester"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter", "std"]}
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = {version = "4.0", features = ["cargo"]}
toml = "0.8.8"
flate2 = "1.0"
shellexpand = "3.0"
chrono = {version = "0.4"}
digest = "0.10.7"
sha2 = "0.10"
http-body-util = "0.1.0"
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
rustls = { version = "0.23.23", features = ["ring"] }
serde_path_to_error = "0.1.16"
rand = "0.9.0"
csv = "1.3.1"
notify = "8.0.0"
influxdb2 = { version = "0.5.2", features = ["rustls"], default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
futures = "0.3.31"
base64 = "0.22.1"
influxdb = "0.7.2"
walkdir = "2.5.0"
notify-debouncer-full = "0.5.0"
async-trait = "0.1.88"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.34", default-features = false, features = [
    "system",
] }

[target.'cfg(windows)'.dependencies]
windows-targets = "0.52.4"


[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempdir = "0.3.7"
